# RV32IMAFC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  assembler.py  rv64gc.s
src/: main.c
src/core/: cpu.c  cpu.h  decode.c  decode.h  decode_table.c  decode_table.h  jump_table.c  jump_table.h  memory.c  memory.h
